unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/CMPL123CME__Registered_Site__c.object-meta.xml
<CustomObject>
    <label>Registered Site</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>RS No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registered Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>