unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__Assigned_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Assigned_No__c</fullName>
        <label>Assigned No</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>