unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__Current_Year__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Current_Year__c</fullName>
        <defaultValue>TEXT( YEAR(Today()) )</defaultValue>
        <label>Current Year</label>
        <length>4</length>
        <type>Text</type>
    </CustomField>