unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__G1_Contact_Office_Country__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__G1_Contact_Office_Country__c</fullName>
        <label>G1 - Contact Office Country</label>
        <length>3</length>
        <type>Text</type>
    </CustomField>