unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__G1_Contact_Office_E_mail__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__G1_Contact_Office_E_mail__c</fullName>
        <label>G1 - Contact Office E-mail</label>
        <type>Email</type>
    </CustomField>