unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__G1_Contact_Office_Fax_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__G1_Contact_Office_Fax_Number__c</fullName>
        <label>G1 - Contact Office Fax Number</label>
        <type>Phone</type>
    </CustomField>