unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__G1_Contact_Office_Middle_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__G1_Contact_Office_Middle_Name__c</fullName>
        <label>G1 - Contact Office Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>