unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__G1_Contact_Office_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__G1_Contact_Office_Postal_Code__c</fullName>
        <label>G1 - Contact Office Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>