unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__G1_Contact_Office_Region_State__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__G1_Contact_Office_Region_State__c</fullName>
        <label>G1 - Contact Office Region State</label>
        <length>2</length>
        <type>Text</type>
    </CustomField>