unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__G1_Contact_Office_Zip_Code_Extension__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__G1_Contact_Office_Zip_Code_Extension__c</fullName>
        <label>G1 - Contact Office Zip Code Extension</label>
        <length>4</length>
        <type>Text</type>
    </CustomField>