unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__G2_Contact_Office_Phone_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__G2_Contact_Office_Phone_Number__c</fullName>
        <label>G2 - Contact Office Phone Number</label>
        <type>Phone</type>
    </CustomField>