unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__Last_Used_Sequence_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Last_Used_Sequence_No__c</fullName>
        <description>Last used sequence number</description>
        <inlineHelpText>Last used sequence number</inlineHelpText>
        <label>Last Used Sequence No</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>