unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__Sequence_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Sequence_No__c</fullName>
        <label>Sequence No</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>