unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/fields/CMPL123CME__Site_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Site_Name__c</fullName>
        <label>Site Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>