unpackaged/main/default/objects/CMPL123CME__Registered_Site__c/validationRules/CMPL123CME__Check_Sequence_No_Size.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Check_Sequence_No_Size</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( CMPL123CME__Sequence_No__c ) &lt;&gt; 5</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Sequence_No__c</errorDisplayField>
        <errorMessage>Sequence No needs to contain 5 digits</errorMessage>
    </ValidationRule>